Highlight UTF-8MB4 upgrade benefits

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -8,12 +8,13 @@ Evolution CMS JP Edition 1.2.0J は、「PHP 8 で安心して動かせる Evolu
 - PHP 8.4 互換性を阻んでいた未定義プロパティ、`mb_strftime()` 依存、`E_STRICT` 例外などを大量に洗い出し、DocumentParser/サブシステム全体で警告を解消しました。加えて、スニペット・プラグイン単位で PHP エラーレベルを切り替えられるようにし、サードパーティ要素に起因する警告とも安全に付き合えます。
 - 管理画面の検索・ロール編集・エクスポート機能などを刷新し、入力値のサニタイズとロジックの抜け漏れをカバーすることで安全性を向上させました。
 - セッション検証、Cookie 属性、サンプル `.htaccess` などセキュリティ周りの既知課題を整理し、初期状態でもより堅牢に動作するよう調整しました。
+- UTF-8MB4 化の手順と変換対象リストを整備し、これまで化けやすかったタツサキ・ハシゴダカや絵文字などの文字列も安定して保存できるようになりました。
 
 ## 新機能と機能拡張
 ### 環境設定・インストールフロー
 - `manager/includes/dotenv-loader.php` に Dotenv クラスを追加し、`index.php` と `install/index.php` で `.env` の読み込みを標準化しました。`install/tpl/config.inc.tpl` も環境変数経由の設定値展開に対応し、コードから認証情報を分離できます。
 - ヘルパー関数に `env()` を追加し、真偽値や `null` 文字列を自動で型変換したうえで取得できるようにしました。カスタムスニペットやプラグインからも安全に環境変数へアクセスできます。
-- UTF-8MB4 変換ツールを拡張し、`convertTablesWithPrefix()` に主要テーブルのリストを組み込みました。どのテーブルが変換対象かを自動で判別するため、手作業による漏れを防げます。
+- UTF-8MB4 変換ツールを拡張し、`convertTablesWithPrefix()` に主要テーブルのリストを組み込みました。どのテーブルが変換対象かを自動で判別するため、手作業による漏れを防げます。UTF-8 では化けてしまったり保存できなかったタツサキ・ハシゴダカ（「髙」などの異体字）や絵文字も、UTF-8MB4 化することで安心して扱えるようになります。
 - `install/sql/fix_settings.php` を大幅に刷新し、ロール権限列の追加・長さの足りなかったカラムの修正・プラグイン/スニペットのエラーレポート列追加など、アップグレード時の不整合をワンクリックで修復できるようになりました。
 
 ### マネージャーの操作性・ワークフロー改善
