docs: add dotenv usage sample to release note

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -12,7 +12,22 @@ Evolution CMS JP Edition 1.2.0J は、「PHP 8 で安心して動かせる Evolu
 
 ## 新機能と機能拡張
 ### 環境設定・インストールフロー
-- `manager/includes/dotenv-loader.php` に Dotenv クラスを追加し、`index.php` と `install/index.php` で `.env` の読み込みを標準化しました。`install/tpl/config.inc.tpl` も環境変数経由の設定値展開に対応し、コードから認証情報を分離できます。
+- `manager/includes/dotenv-loader.php` に Dotenv クラスを追加し、`index.php` と `install/index.php` で `.env` の読み込みを標準化しました。`install/tpl/config.inc.tpl` も環境変数経由の設定値展開に対応し、コードから認証情報を分離できます。以下のように `.env` を用意すれば、既存の `config.inc.php` には値をハードコードせずに済みます。
+
+  ```dotenv
+  # database
+  DB_HOST=localhost
+  DB_DATABASE=evo_jp
+  DB_USERNAME=evo_user
+  DB_PASSWORD=change-me
+  TABLE_PREFIX=modx_
+
+  # application
+  EVO_BASE_URL=https://example.jp/
+  MAIL_FROM_ADDRESS=info@example.jp
+  ```
+
+  インストールスクリプトやカスタム要素からは `env()` ヘルパー経由で値を参照できます。例えば `install/tpl/config.inc.tpl` では `env('DB_HOST', '[+database_server+]')` のように記述され、`.env` があればそちらを優先、未定義なら従来の設定値を使います。また、スニペット内でも `env('MAIL_FROM_ADDRESS')` を呼べば同じ値を安全に取り出せます。【F:index.php†L82-L89】【F:manager/includes/dotenv-loader.php†L1-L56】【F:install/index.php†L20-L23】【F:install/tpl/config.inc.tpl†L1-L25】【F:manager/includes/helpers.php†L538-L570】
 - ヘルパー関数に `env()` を追加し、真偽値や `null` 文字列を自動で型変換したうえで取得できるようにしました。カスタムスニペットやプラグインからも安全に環境変数へアクセスできます。
 - UTF-8MB4 変換ツールを拡張し、`convertTablesWithPrefix()` に主要テーブルのリストを組み込みました。どのテーブルが変換対象かを自動で判別するため、手作業による漏れを防げます。UTF-8 では化けてしまったり保存できなかったタツサキ・ハシゴダカ（「髙」などの異体字）や絵文字も、UTF-8MB4 化することで安心して扱えるようになります。
 - `install/sql/fix_settings.php` を大幅に刷新し、ロール権限列の追加・長さの足りなかったカラムの修正・プラグイン/スニペットのエラーレポート列追加など、アップグレード時の不整合をワンクリックで修復できるようになりました。
