Clarify PHP 8 guidance in 1.2.0J release notes

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,11 +1,11 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、「PHP 8 で安心して動かせる Evolution」を最優先テーマに据えた大型アップデートです。PHP 7.4 までは Notice 止まりだったコードが PHP 8 で Warning/Error 化する問題を総点検し、DocumentParser を中心に発火順序・ログ出力・サードパーティ要素の扱いを再構築しました。あわせてアプリケーション設定を `.env` に集約できる Dotenv ローダーを新設し、インストーラーやブートストラップ処理も環境変数ベースに再設計。検索・管理処理・ファイル操作といった日常業務の足回りも磨き上げています。
+Evolution CMS JP Edition 1.2.0J は、「PHP 8 で安心して動かせる Evolution」を最優先テーマに据えた大型アップデートです。前バージョンで進めていた PHP 8 対応をさらに掘り下げ、PHP 7.4 までは Notice 止まりだったコードが PHP 8 で Warning/Error 化するケースを洗い直しました。DocumentParser を中心に発火順序・ログ出力・サードパーティ要素の扱いを再設計し、互換性強化の仕上げを図っています。あわせてアプリケーション設定を `.env` に集約できる Dotenv ローダーを新設し、インストーラーやブートストラップ処理も環境変数ベースに再設計。検索・管理処理・ファイル操作といった日常業務の足回りも磨き上げています。
 
 ## ハイライト
 - `.env` ローダーと `env()` ヘルパーを追加し、インストール手順からランタイム設定まで環境変数で統一管理できるようにしました。
-- PHP 8.4 互換性を阻んでいた未定義プロパティ、`mb_strftime()` 依存、`E_STRICT` 例外などを大量に洗い出し、DocumentParser/サブシステム全体で警告を解消しました。加えて、スニペット・プラグイン単位で PHP エラーレベルを切り替えられるようにし、サードパーティ要素に起因する警告とも安全に付き合えます。
+- PHP 8.4 互換性を阻んでいた未定義プロパティ、`mb_strftime()` 依存、`E_STRICT` 例外などを大量に洗い出し、DocumentParser/サブシステム全体で警告を解消しました。前バージョンの対応に続き、今回はスニペット・プラグイン単位で PHP エラーレベルを切り替えられる仕組みを追加し、サードパーティ要素に起因する警告とも安全に付き合えます。
 - 管理画面の検索・ロール編集・エクスポート機能などを刷新し、入力値のサニタイズとロジックの抜け漏れをカバーすることで安全性を向上させました。
 - セッション検証、Cookie 属性、サンプル `.htaccess` などセキュリティ周りの既知課題を整理し、初期状態でもより堅牢に動作するよう調整しました。
 - UTF-8MB4 化の手順と変換対象リストを整備し、これまで化けやすかったタツサキ・ハシゴダカや絵文字などの文字列も安定して保存できるようになりました。
@@ -53,9 +53,9 @@ Evolution CMS JP Edition 1.2.0J は、「PHP 8 で安心して動かせる Evolu
 - DocumentParser のイベント処理で現在実行中のスニペットコードを追跡できるプロパティを追加し、例外発生時のログ出力精度を高めました。
 
 ### PHP 8 時代のエラー対策と運用ガイド
-- スニペット・プラグインのテーブルに `error_reporting` 列を追加し（アップグレード時は `fix_settings` が自動で追加入力）、要素ごとにエラーレベルを「グローバルを継承/Warning 止まり/Notice 無視/全無視/全検出」から選択できるようになりました。問題を抱えている要素だけ一時的に検出レベルを下げ、動作確認を続けながら段階的に修正できます。【F:install/sql/create_tables.sql†L204-L243】【F:install/sql/fix_settings.php†L51-L56】【F:manager/actions/element/mutate_snippet.dynamic.php†L399-L426】【F:manager/actions/element/mutate_plugin.dynamic.php†L706-L733】
+- スニペット・プラグインのテーブルに `error_reporting` 列を追加し（アップグレード時は `fix_settings` が自動で追加入力）、要素ごとにエラーレベルを「グローバルを継承/Warning 止まり/Notice 無視/全無視/全検出」から選択できるようになりました。前バージョンではグローバル設定を「全て無視する」に落とさなければ一時しのぎできなかった PHP 8 由来の警告も、今回から問題のある要素だけ検出レベルを調整しながら段階的に修正できます。【F:install/sql/create_tables.sql†L204-L243】【F:install/sql/fix_settings.php†L51-L56】【F:manager/actions/element/mutate_snippet.dynamic.php†L399-L426】【F:manager/actions/element/mutate_plugin.dynamic.php†L706-L733】
 - マネージャーから保存された設定は `save_snippet` / `save_plugin` プロセッサーで許可された値だけを受け付け、DocumentParser が実行時にリクエストされたレベルを解析して PHP の `error_reporting()` を切り替えます。グローバル設定を落とさずに、問題のある要素だけを安全に隔離できます。【F:manager/processors/snippet/save_snippet.processor.php†L16-L133】【F:manager/processors/plugin/save_plugin.processor.php†L22-L162】【F:manager/includes/document.parser.class.inc.php†L2798-L2899】
-- グローバル設定はこれまで通りシステム設定の「PHP エラーの検出レベル」で制御できます。まずはテスト環境でレベルを「全て検出」に近づけて挙動を確認し、問題があるスニペットやプラグインだけ段階的にレベルを下げて改修する運用を推奨します。【F:manager/actions/tool/mutate_settings/tab3_user_settings.inc.php†L101-L111】【F:manager/includes/default.config.php†L82-L82】
+- グローバル設定はこれまで通りシステム設定の「PHP エラーの検出レベル」で制御できます。セキュリティを下げたまま運用することは推奨されません。まずはテスト環境でレベルを「全て検出」に近づけて挙動を確認し、必要に応じてスニペットやプラグイン側で一時的にレベルを下げつつ、最終的には本体・サードパーティ要素の修正に努めてください。【F:manager/actions/tool/mutate_settings/tab3_user_settings.inc.php†L101-L111】【F:manager/includes/default.config.php†L82-L82】
 
 ## 開発者向けの変更点
 - `config()`・`entity()`・`doc()` などのヘルパー活用が進み、グローバル変数を直接参照しなくても主要情報を取得できるよう整理されています。拡張開発時には新しいヘルパーの活用を推奨します。
