Rewrite 1.2.0J release notes for user-first focus

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,76 +1,64 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、「PHP 8 で安心して動かせる Evolution」を最優先テーマに据えた大型アップデートです。前バージョンで進めていた PHP 8 対応をさらに掘り下げ、PHP 7.4 までは Notice 止まりだったコードが PHP 8 で Warning/Error 化するケースを洗い直しました。DocumentParser を中心に発火順序・ログ出力・サードパーティ要素の扱いを再設計し、互換性強化の仕上げを図っています。あわせてアプリケーション設定を `.env` に集約できる Dotenv ローダーを新設し、インストーラーやブートストラップ処理も環境変数ベースに再設計。検索・管理処理・ファイル操作といった日常業務の足回りも磨き上げています。
+Evolution CMS JP Edition 1.2.0J は、前バージョンから続く PHP 8 対応を一段と深め、実運用で安心して切り替えられることを最優先に仕上げた大型アップデートです。PHP 7.4 までは Notice で済んでいた挙動が PHP 8 で Warning や Error になってしまうケースを洗い直し、DocumentParser を中心に発火順序やログの出力を整理しました。さらにスニペットやプラグインごとに PHP エラーレベルを調整できるようになり、問題のある要素だけを個別に点検しながら段階的に修正できます。設定面では `.env` による外部化を標準化し、UTF-8MB4 変換の導線も整備することで、ユーザーの安心感と日々の運用効率を両立しました。
 
-## ハイライト
-- `.env` ローダーと `env()` ヘルパーを追加し、インストール手順からランタイム設定まで環境変数で統一管理できるようにしました。
-- PHP 8.4 互換性を阻んでいた未定義プロパティ、`mb_strftime()` 依存、`E_STRICT` 例外などを大量に洗い出し、DocumentParser/サブシステム全体で警告を解消しました。前バージョンの対応に続き、今回はスニペット・プラグイン単位で PHP エラーレベルを切り替えられる仕組みを追加し、サードパーティ要素に起因する警告とも安全に付き合えます。
-- 管理画面の検索・ロール編集・エクスポート機能などを刷新し、入力値のサニタイズとロジックの抜け漏れをカバーすることで安全性を向上させました。
-- セッション検証、Cookie 属性、サンプル `.htaccess` などセキュリティ周りの既知課題を整理し、初期状態でもより堅牢に動作するよう調整しました。
-- UTF-8MB4 化の手順と変換対象リストを整備し、これまで化けやすかったタツサキ・ハシゴダカや絵文字などの文字列も安定して保存できるようになりました。
+## ユーザー向け注目ポイント
 
-## 新機能と機能拡張
-### 環境設定・インストールフロー
-- `manager/includes/dotenv-loader.php` に Dotenv クラスを追加し、`index.php` と `install/index.php` で `.env` の読み込みを標準化しました。`install/tpl/config.inc.tpl` も環境変数経由の設定値展開に対応し、コードから認証情報を分離できます。以下のように `.env` を用意すれば、既存の `config.inc.php` には値をハードコードせずに済みます。
+### PHP 8 への移行を現実的に
+前回のリリースで進めていた PHP 8 対応をさらに掘り下げ、DocumentParser やサブシステムの未定義プロパティ、古い API への依存を解消しました。特に課題だったのは、PHP 7.4 までは Notice で済んでいたコードが PHP 8 で Warning/Error に昇格してしまう点です。グローバル設定の「PHP エラーの検出レベル」を落とす力技に頼らずとも、スニペット・プラグイン単位で「どこまで検出するか」を切り替えられるようになりました。トラブルを起こす要素だけ一時的にレベルを緩め、動作を確保しつつ段階的に修正を進めてください。セキュリティを下げた状態を常用することは推奨されませんが、これまでよりも安全に移行期間を確保できます。
 
-  ```dotenv
-  # database
-  DB_HOST=localhost
-  DB_DATABASE=evo_jp
-  DB_USERNAME=evo_user
-  DB_PASSWORD=change-me
-  TABLE_PREFIX=modx_
+### 文字化けの不安なく、UTF-8MB4 へ
+長年の懸念だった UTF-8MB4 変換の手順を整理し、主要テーブルを自動で判別する仕組みを用意しました。これにより、タツサキ・ハシゴダカ（「髙」などの異体字）や絵文字を登録したときに化けてしまう問題を抑えられます。インストール直後から UTF-8MB4 で構築したい場合も、既存サイトを後から変換したい場合も迷わず進められるガイドを提供しています。
 
-  # application
-  EVO_BASE_URL=https://example.jp/
-  MAIL_FROM_ADDRESS=info@example.jp
-  ```
+### `.env` による設定の外部化
+アプリケーション設定を `.env` にまとめられる Dotenv ローダーを新設しました。以下のようなファイルを用意しておけば、データベース接続情報やメール設定などをコードベースから切り離せます。
 
-  インストールスクリプトやカスタム要素からは `env()` ヘルパー経由で値を参照できます。例えば `install/tpl/config.inc.tpl` では `env('DB_HOST', '[+database_server+]')` のように記述され、`.env` があればそちらを優先、未定義なら従来の設定値を使います。また、スニペット内でも `env('MAIL_FROM_ADDRESS')` を呼べば同じ値を安全に取り出せます。【F:index.php†L82-L89】【F:manager/includes/dotenv-loader.php†L1-L56】【F:install/index.php†L20-L23】【F:install/tpl/config.inc.tpl†L1-L25】【F:manager/includes/helpers.php†L538-L570】
-- ヘルパー関数に `env()` を追加し、真偽値や `null` 文字列を自動で型変換したうえで取得できるようにしました。カスタムスニペットやプラグインからも安全に環境変数へアクセスできます。
-- UTF-8MB4 変換ツールを拡張し、`convertTablesWithPrefix()` に主要テーブルのリストを組み込みました。どのテーブルが変換対象かを自動で判別するため、手作業による漏れを防げます。UTF-8 では化けてしまったり保存できなかったタツサキ・ハシゴダカ（「髙」などの異体字）や絵文字も、UTF-8MB4 化することで安心して扱えるようになります。
-- `install/sql/fix_settings.php` を大幅に刷新し、ロール権限列の追加・長さの足りなかったカラムの修正・プラグイン/スニペットのエラーレポート列追加など、アップグレード時の不整合をワンクリックで修復できるようになりました。
+```dotenv
+# database
+DB_HOST=localhost
+DB_DATABASE=evo_jp
+DB_USERNAME=evo_user
+DB_PASSWORD=change-me
+TABLE_PREFIX=modx_
 
-### マネージャーの操作性・ワークフロー改善
-- 文書検索およびユーザー検索の SQL を見直し、未エスケープ値や null 混入でクエリが壊れる不具合を解消しました。ロール別フィルタも正しく動作するようロジックを整理しています。
-- エクスポート機能に HTTP ベーシック認証利用時の警告を追加し、限定公開サイトで誤って静的書き出しを実行してしまうリスクを軽減しました。
-- TinyMCE プラグイン設定やユーザー管理フォーム群を全面的に整形し、`entity()` ヘルパーを活用してサニタイズを統一。PHP 8 系で警告が出ていた未定義インデックスや型不一致の問題も抑え込んでいます。
-- プラグイン/モジュールの ZIP 展開処理を ZipArchive ベースに刷新し、大きなパッケージでも安定して解凍できるようにしました。
-- MCPUK ファイルブラウザーやマネージャー UI の細部（ファイルアップロード時のメッセージ、フォームの配置、確認メッセージなど）を調整し、作業動線を妨げていた細かな違和感を解消しました。
+# application
+EVO_BASE_URL=https://example.jp/
+MAIL_FROM_ADDRESS=info@example.jp
+```
 
-## セキュリティと信頼性の向上
-- セッション検証処理からデバッグ出力を削除し、必要なキーの有無を明示的に検証するよう変更しました。セッション破損時でも Notice が画面に漏れません。
-- Cookie の SameSite/secure 属性設定を整理し、HTTPS 判定やベースパス初期化の手続きを堅牢化しました。`sample.htaccess` からも旧式のコメントを削除しています。
-- `sessionv()`/`postv()`/`anyv()` などのヘルパー利用を徹底し、未定義インデックスによる警告や潜在的な SQL インジェクションを抑制しました。
-- パスワード自動生成・ログイン処理・ユーザー登録の各フローで例外ケースのハンドリングを見直し、エラーが起きても処理が中断しにくいよう再設計しました。
-- キャッシュ同期やファイルアップロード、メール送信の各処理に null チェックやリトライ条件を追加し、PHP 8 系で顕在化していた警告を潰しています。
+インストーラーや各種スニペットからは `env()` ヘルパーで値を参照でき、環境ごとに異なる設定を安全に切り替えられます。既存の `config.inc.php` と併用しつつ、段階的に移行することも可能です。
 
-## PHP 8.4 互換性対応
-- DocumentParser・SubParser・DBAPI で未定義プロパティを初期化し、`is_file()` や `ini_set()` などで使われていたエラー抑制演算子（@）を撤廃しました。Strict モードでも安定して実行できます。
-- `mb_strftime()` に依存していた日時表示を `DateTime` ベースへ順次置き換え、`%-d` や `%曜` などロケール依存の書式もサポートするようにしました。
-- エラー処理から `E_STRICT` を除外し、`mysqli` ドライバーを前提とした初期化に統一。旧来の `mysql.inc.php` は削除され、PHP 8.4 以降でもインストール直後から動作します。
-- DocumentParser のイベント処理で現在実行中のスニペットコードを追跡できるプロパティを追加し、例外発生時のログ出力精度を高めました。
+### 管理画面の使い勝手を改善
+日常的に触れるマネージャーの操作性を細かく見直しました。文書検索・ユーザー検索で未エスケープの入力が混ざっても壊れないよう SQL を整理し、ロール別の絞り込みも正確に動作します。ZIP パッケージの取り込みを ZipArchive ベースに更新したことで、大きめの拡張機能でもタイムアウトしにくくなりました。MCPUK ファイルブラウザーやフォーム配置などの細部も調整し、作業のひっかかりを取り除いています。
 
-### PHP 8 時代のエラー対策と運用ガイド
-- スニペット・プラグインのテーブルに `error_reporting` 列を追加し（アップグレード時は `fix_settings` が自動で追加入力）、要素ごとにエラーレベルを「グローバルを継承/Warning 止まり/Notice 無視/全無視/全検出」から選択できるようになりました。前バージョンではグローバル設定を「全て無視する」に落とさなければ一時しのぎできなかった PHP 8 由来の警告も、今回から問題のある要素だけ検出レベルを調整しながら段階的に修正できます。【F:install/sql/create_tables.sql†L204-L243】【F:install/sql/fix_settings.php†L51-L56】【F:manager/actions/element/mutate_snippet.dynamic.php†L399-L426】【F:manager/actions/element/mutate_plugin.dynamic.php†L706-L733】
-- マネージャーから保存された設定は `save_snippet` / `save_plugin` プロセッサーで許可された値だけを受け付け、DocumentParser が実行時にリクエストされたレベルを解析して PHP の `error_reporting()` を切り替えます。グローバル設定を落とさずに、問題のある要素だけを安全に隔離できます。【F:manager/processors/snippet/save_snippet.processor.php†L16-L133】【F:manager/processors/plugin/save_plugin.processor.php†L22-L162】【F:manager/includes/document.parser.class.inc.php†L2798-L2899】
-- グローバル設定はこれまで通りシステム設定の「PHP エラーの検出レベル」で制御できます。セキュリティを下げたまま運用することは推奨されません。まずはテスト環境でレベルを「全て検出」に近づけて挙動を確認し、必要に応じてスニペットやプラグイン側で一時的にレベルを下げつつ、最終的には本体・サードパーティ要素の修正に努めてください。【F:manager/actions/tool/mutate_settings/tab3_user_settings.inc.php†L101-L111】【F:manager/includes/default.config.php†L82-L82】
+## セキュリティと信頼性の強化
+- セッション検証や Cookie 属性の扱いを見直し、デバッグ情報が画面に漏れないよう整理しました。
+- キャッシュ同期、ファイルアップロード、メール送信といった運用フローで null チェックやリトライ条件を追加し、PHP 8 系で顕在化していた警告を抑えています。
+- サンプル `.htaccess` から古い記述を削除し、初期状態でも堅牢な構成に近づけました。
 
-## 開発者向けの変更点
-- `config()`・`entity()`・`doc()` などのヘルパー活用が進み、グローバル変数を直接参照しなくても主要情報を取得できるよう整理されています。拡張開発時には新しいヘルパーの活用を推奨します。
-- キャッシュ制御や時間計測ロジックを共通化し、リクエスト時刻を 1 度だけ計測して使い回すようになりました。イベントハンドラーやプラグインで独自に `time()` を呼び出す必要が減ります。
-- ZIP 展開、PHPMailer、FileUpload など外部コンポーネント周辺の古い互換コードを整理し、最新の PHP 標準に沿った実装へ移行しています。
+## PHP 8 時代の運用ガイド
+1. まずはテスト環境で「PHP エラーの検出レベル」を高めに設定し、Warning や Notice の発生源を洗い出してください。
+2. 問題のあるスニペットやプラグインだけ、今回の新機能でエラーレベルを一時的に緩めます。動作を確保したうえで、コードの修正を進めてください。
+3. 修正が完了した要素から順に検出レベルを元へ戻し、最終的にはグローバル設定も「全て検出」に近づけるのが理想です。
+4. エラーを握りつぶしたまま運用し続けることは、セキュリティリスクにつながります。長期的には PHP 8 を前提とした最新の書き方にアップデートしてください。
+
+## 開発者向けの主な変更
+- DocumentParser やサブパーサーで未定義プロパティを初期化し、`@` 演算子に頼らずに実行できるよう整理しました。
+- `mb_strftime()` 依存を減らし、`DateTime` ベースでロケールを意識した日時表記を扱えるようにしています。
+- `config()`・`entity()`・`doc()` などのヘルパー整備が進み、グローバル変数を直接触らなくても主要情報を取得しやすくなりました。
+- PHPMailer や FileUpload など外部コンポーネント周辺の古い互換コードを削除し、PHP 8.4 でも問題なく動作するよう更新しています。
+- アップグレードスクリプトを刷新し、権限テーブルやプラグイン設定の差分を自動で補うようになりました。既存環境の構成を保ちながら安全に移行できます。
 
 ## 廃止・互換性に関する注意
-- `manager/includes/extenders/dbapi/mysql.inc.php` が廃止され、データベースドライバーは `mysqli` 固定となりました。アップグレード前に PHP の `mysqli` 拡張が有効になっているか確認してください。
-- Safe Mode 互換のために残っていた `set_time_limit()` や不要なコールバック宣言を削除しています。独自スクリプトで同様の想定をしている場合は見直しをお願いします。
-- `.env` を導入したことで、従来 `manager/includes/config.inc.php` のみで完結していた設定が環境変数と併用されます。自動デプロイ環境では `.env` をリポジトリ外に保管する運用へ切り替えてください。
+- 旧来の `mysql` ドライバーを削除し、データベースは `mysqli` 固定になりました。PHP 側の拡張が有効になっているかご確認ください。
+- Safe Mode 互換のために残っていた `set_time_limit()` などの古いワークアラウンドを整理しています。独自スクリプトで同様の想定をしている場合は調整が必要です。
+- `.env` を導入したことで、設定値はコードと環境ファイルの双方で管理する前提になりました。自動デプロイでは `.env` をリポジトリ外で保護する運用へ切り替えてください。
 
 ## アップデート手順と既知の注意事項
-1. 本番環境に適用する前に PHP 8.4 相当のテスト環境で動作確認を行ってください。`config.inc.php` と `.env` の整合性に注意します。
-2. アップデート後は `fix_settings` ツールを実行し、権限テーブルやプラグイン設定に不足がないか確認してください。
-3. UTF-8MB4 化を検討している場合は、アップデート後に新しい変換リストで `install/convert2utf8mb4.php` を実行します。
-4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されているため、適用後にパーミッションのチェックを必ず実施してください。
+1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性を確認してください。
+2. アップデート後は `fix_settings` ツールを実行し、権限テーブルやプラグイン設定に不足がないかチェックします。
+3. UTF-8MB4 化を検討している場合は、アップデート後に新しいリストを使って `install/convert2utf8mb4.php` を実行してください。
+4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されています。適用後にパーミッションを再確認してください。
 
-旧来環境からの移行を支援しつつ、現代的な運用・開発フローにも対応できるよう全方位でテコ入れを行いました。最新のベストプラクティスを参照しながら、Evolution CMS JP Edition 1.2.0J をぜひご活用ください。
+現代的な運用・開発フローに合わせた改善を随所に盛り込みながら、旧来の資産も丁寧に引き継げるよう配慮したのが 1.2.0J です。Evolution CMS JP Edition を PHP 8 時代でも安心してご活用ください。
