Highlight per-element PHP 8 guidance in 1.2.0J notes

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,12 +1,14 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、前バージョンから続く PHP 8 対応を一段と深め、実運用で安心して切り替えられることを最優先に仕上げた大型アップデートです。PHP 7.4 までは Notice で済んでいた挙動が PHP 8 で Warning や Error になってしまうケースを洗い直し、DocumentParser を中心に発火順序やログの出力を整理しました。さらにスニペットやプラグインごとに PHP エラーレベルを調整できるようになり、問題のある要素だけを個別に点検しながら段階的に修正できます。設定面では `.env` による外部化を標準化し、UTF-8MB4 変換の導線も整備することで、ユーザーの安心感と日々の運用効率を両立しました。
+Evolution CMS JP Edition 1.2.0J は、前バージョンから続く PHP 8 対応を一段と深め、実運用で安心して切り替えられることを最優先に仕上げた大型アップデートです。PHP 7.4 までは Notice で済んでいた挙動が PHP 8 で Warning や Error になってしまうケースを洗い直し、DocumentParser を中心に発火順序やログの出力を整理しました。従来はグローバル設定を「全て無視」にする力技で一時的に凌ぐしかありませんでしたが、1.2.0J ではスニペットやプラグインごとに PHP エラーレベルを調整できるようになり、問題のある要素だけを安全に切り分けながら段階的に修正できます。
+
+設定面では `.env` による外部化を標準化し、UTF-8MB4 変換の導線も整備することで、ユーザーの安心感と日々の運用効率を両立しました。PHP 8 で迷いがちな運用も、今回の粒度の細かいエラーレベル制御によってスタート地点から安心して進められます。
 
 ## ユーザー向け注目ポイント
 
 ### PHP 8 への移行を現実的に
-前回のリリースで進めていた PHP 8 対応をさらに掘り下げ、DocumentParser やサブシステムの未定義プロパティ、古い API への依存を解消しました。特に課題だったのは、PHP 7.4 までは Notice で済んでいたコードが PHP 8 で Warning/Error に昇格してしまう点です。グローバル設定の「PHP エラーの検出レベル」を落とす力技に頼らずとも、スニペット・プラグイン単位で「どこまで検出するか」を切り替えられるようになりました。トラブルを起こす要素だけ一時的にレベルを緩め、動作を確保しつつ段階的に修正を進めてください。セキュリティを下げた状態を常用することは推奨されませんが、これまでよりも安全に移行期間を確保できます。
+前回のリリースで進めていた PHP 8 対応をさらに掘り下げ、DocumentParser やサブシステムの未定義プロパティ、古い API への依存を解消しました。特に課題だったのは、PHP 7.4 までは Notice で済んでいたコードが PHP 8 で Warning/Error に昇格してしまう点です。今回からはスニペット・プラグイン単位で「どこまで検出するか」を切り替えられるようになりました。トラブルを起こす要素だけ一時的にレベルを緩め、動作を確保しつつ段階的に修正を進めてください。セキュリティを下げた状態を常用することは推奨されませんが、これまでよりも安全に移行期間を確保できます。
 
 ### 文字化けの不安なく、UTF-8MB4 へ
 長年の懸念だった UTF-8MB4 変換の手順を整理し、主要テーブルを自動で判別する仕組みを用意しました。これにより、タツサキ・ハシゴダカ（「髙」などの異体字）や絵文字を登録したときに化けてしまう問題を抑えられます。インストール直後から UTF-8MB4 で構築したい場合も、既存サイトを後から変換したい場合も迷わず進められるガイドを提供しています。
@@ -23,7 +25,7 @@ DB_PASSWORD=change-me
 TABLE_PREFIX=modx_
 
 # application
-EVO_BASE_URL=https://example.jp/
+MODX_BASE_URL=https://example.jp/
 MAIL_FROM_ADDRESS=info@example.jp
 ```
 
