--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,20 +1,54 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、前バージョンから続く PHP 8 対応を一段と深め、実運用で安心して切り替えられることを最優先に仕上げた大型アップデートです。PHP 7.4 までは Notice で済んでいた挙動が PHP 8 で Warning や Error になってしまうケースを洗い直し、DocumentParser を中心に発火順序やログの出力を整理しました。従来はグローバル設定を「全て無視」にする力技で一時的に凌ぐしかありませんでしたが、1.2.0J ではスニペットやプラグインごとに PHP エラーレベルを調整できるようになり、問題のある要素だけを安全に切り分けながら段階的に修正できます。
+Evolution CMS JP Edition 1.2.0J は「PHP 8 時代を安心して駆け抜ける Evolution」をテーマに、前バージョンで着手した互換性対応をさらに深掘りした大型アップデートです。PHP 7.4 までは Notice で済んでいたコードが PHP 8 では Warning/Error に昇格する問題を洗い直し、DocumentParser を中心としたイベント順序やログ出力を再構築しました。最大のポイントは、**スニペットやプラグイン単位で PHP エラーレベルを調整できる新機能**です。従来の「グローバル設定を全て無視」に頼らず、問題のある要素だけ一時的に緩めながら段階的に修正できるようになりました。セキュリティを下げたまま運用を続けることは推奨しませんが、これまでより安全に移行期間を確保できます。
 
-設定面では `.env` による外部化を標準化し、UTF-8MB4 変換の導線も整備することで、ユーザーの安心感と日々の運用効率を両立しました。PHP 8 で迷いがちな運用も、今回の粒度の細かいエラーレベル制御によってスタート地点から安心して進められます。
+設定面では `.env` による外部化を標準化し、UTF-8MB4 変換の導線も整備することで、日々の運用効率とユーザー体験を両立しました。以下では「追加・改良・廃止」を一続きで俯瞰できる形で整理します。
 
-## ユーザー向け注目ポイント
+---
 
-### PHP 8 への移行を現実的に
-前回のリリースで進めていた PHP 8 対応をさらに掘り下げ、DocumentParser やサブシステムの未定義プロパティ、古い API への依存を解消しました。特に課題だったのは、PHP 7.4 までは Notice で済んでいたコードが PHP 8 で Warning/Error に昇格してしまう点です。今回からはスニペット・プラグイン単位で「どこまで検出するか」を切り替えられるようになりました。トラブルを起こす要素だけ一時的にレベルを緩め、動作を確保しつつ段階的に修正を進めてください。セキュリティを下げた状態を常用することは推奨されませんが、これまでよりも安全に移行期間を確保できます。
+## 追加されたもの (Added)
+- **スニペット/プラグイン単位の PHP エラーレベル制御**: 問題のある要素だけ検出レベルを緩め、動作を確保しつつ修正を進められます。移行後は必ず通常レベルへ戻してください。
+- **Dotenv ローダーと `env()` ヘルパー**: `.env` ファイルから環境変数を読み込み、`config.inc.php` に依存せず設定を切り替えられます。インストーラーとフロントエンド双方で利用可能です。
+- **`index.php` / `install/index.php` の `.env` 読み込み処理**: 設定をコードベースから切り離し、環境差異に強い構成へ移行できます。
+- **設定修復スクリプト `fix_settings.php`**: 旧来の SQL ファイルではなく PHP スクリプトで権限やオプションを補完します。アップグレード直後に実行することで設定漏れを解消できます。
+- **管理画面のツリーペインタイトル省略オプション**: 長いリソース名でも見やすく管理できます。
+- **Basic 認証環境でのエクスポート警告**: 認証が有効なサイトでエクスポートする際に注意喚起を表示します。
 
-### 文字化けの不安なく、UTF-8MB4 へ
-長年の懸念だった UTF-8MB4 変換の手順を整理し、主要テーブルを自動で判別する仕組みを用意しました。これにより、タツサキ・ハシゴダカ（「髙」などの異体字）や絵文字を登録したときに化けてしまう問題を抑えられます。インストール直後から UTF-8MB4 で構築したい場合も、既存サイトを後から変換したい場合も迷わず進められるガイドを提供しています。
+## 改良されたもの (Improved)
+- **PHP 8.4 互換性の徹底強化**: `E_STRICT` を廃止し、未定義プロパティや古い構文を精査しました。`[]` 配列アクセスや `config()`/`sessionv()` などのヘルパー利用を徹底しています。
+- **DocumentParser と周辺サブシステムの安定化**: 発火順序・キャッシュ同期・ログ出力を整理し、`@` 演算子に頼らない例外処理へ移行しました。
+- **UTF-8MB4 変換フローの整備**: 主要テーブルの自動判別ロジックを追加し、異体字（髙 など）や絵文字も欠損なく保存できます。
+- **マネージャー UI/UX の改善**: 文書検索・ユーザー検索の SQL を整理してロールフィルタが正しく働くようにし、MCPUK ファイルブラウザーやフォーム配置を見直しました。ZipArchive ベースのパッケージ取り込みで大型拡張も安定して導入できます。
+- **セキュリティ属性の強化**: Cookie に `Secure` / `HttpOnly` / `SameSite` を付与し、セッション検証とログ出力を見直しました。
+- **メール/アップロード/キャッシュ関連の堅牢化**: null チェックとリトライ条件を追加して PHP 8 系で顕在化した警告を抑えています。
+- **テンプレート・プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に直接触れなくても主要情報を取得できるようにしました。
 
-### `.env` による設定の外部化
-アプリケーション設定を `.env` にまとめられる Dotenv ローダーを新設しました。以下のようなファイルを用意しておけば、データベース接続情報やメール設定などをコードベースから切り離せます。
+## 廃止・置き換えたもの (Removed / Replaced)
+| 廃止・変更対象 | 理由 | 代替手段 |
+| --- | --- | --- |
+| `mysql.inc.php` および `mysql_*` 互換コード | PHP7 以降で非推奨かつ保守不能 | `mysqli.inc.php` へ完全移行 |
+| `fix_settings.sql` | 環境差異が大きく、適用漏れが発生 | PHP スクリプト `fix_settings.php` で統一 |
+| `strftime()` / `mb_strftime()` 依存 | PHP 8.1 で非推奨 | `DateTime`・`date()` ベースの実装 |
+| `{}` による配列アクセス・`extract()` 多用 | 可読性・安全性の低下 | `[]` と明示的な代入へ統一 |
+| 過度な `@` 演算子によるエラー抑止 | 問題の可視化を阻害 | 明示的な条件分岐と例外処理 |
+| 旧 `sample.htaccess` の冗長コメント | 初期状態での適用性が低かった | 必要最小限の記述に再整理 |
+| Mootools ベースの旧 UI 断片 | 互換性が低下・競合多発 | Bootstrap 5/JQuery ベースの実装 |
+
+---
+
+## PHP 8 時代の運用ガイド
+1. **テスト環境での事前洗い出し**: まずは PHP エラーレベルを最大にして Warning/Notice の発生源を確認します。
+2. **問題の切り分け**: 不具合を起こすスニペットやプラグインだけ、今回追加したエラーレベル設定で一時的に緩めます。動作を確保した状態で修正を進めてください。
+3. **段階的な巻き戻し**: 修正が完了した要素から検出レベルを標準へ戻し、最終的にはグローバル設定も「全て検出」に近づけるのが理想です。
+4. **恒久対策を優先**: エラーを握り潰したままの運用は推奨されません。PHP 8 向けにコードを更新し、セキュリティレベルを下げっぱなしにしないことが大切です。
+
+## UTF-8MB4 移行メモ
+- 1.2.0J では主要テーブルの判別リストをアップデートし、`install/convert2utf8mb4.php` を使うだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない UTF-8MB4 へ移行できます。
+- 既存サイトを変換する場合は事前にバックアップを取得し、ダウンタイムを確保したうえで実行してください。インストール直後に UTF-8MB4 で構築するケースでも、同じ手順で整合性を確認できます。
+
+## `.env` サンプルと活用のヒント
+`.env` を使えば、データベース接続情報やメール設定などをリポジトリ外に分離しつつ、`env()` ヘルパーで一貫して参照できます。以下は最小構成のサンプルです。
 
 ```dotenv
 # database
@@ -29,38 +63,19 @@ MODX_BASE_URL=https://example.jp/
 MAIL_FROM_ADDRESS=info@example.jp
 ```
 
-インストーラーや各種スニペットからは `env()` ヘルパーで値を参照でき、環境ごとに異なる設定を安全に切り替えられます。既存の `config.inc.php` と併用しつつ、段階的に移行することも可能です。
+- `.env` は本番・ステージング・ローカルで内容を切り替えられます。自動デプロイでは `.env` をリポジトリに含めず、各環境で安全に配布してください。
+- 既存の `config.inc.php` と併用できるため、段階的な移行も可能です。カスタムスニペットからは `env('KEY', 'fallback')` のように参照できます。
 
-### 管理画面の使い勝手を改善
-日常的に触れるマネージャーの操作性を細かく見直しました。文書検索・ユーザー検索で未エスケープの入力が混ざっても壊れないよう SQL を整理し、ロール別の絞り込みも正確に動作します。ZIP パッケージの取り込みを ZipArchive ベースに更新したことで、大きめの拡張機能でもタイムアウトしにくくなりました。MCPUK ファイルブラウザーやフォーム配置などの細部も調整し、作業のひっかかりを取り除いています。
+## 開発者向けメモ
+- DocumentParser や SubParser で初期化されていなかったプロパティを整理し、例外処理を強化しました。
+- `config()`・`entity()`・`doc()` などのヘルパーが拡充され、グローバル変数を直接参照しなくても主要情報にアクセスできます。
+- PHPMailer・FileUpload など外部ライブラリ周辺の互換コードを更新し、PHP 8.4 でも問題なく動作します。
+- ZipArchive を利用したパッケージ展開や、セッション/キャッシュ API の見直しによって、アドオン開発時のエッジケースが軽減されています。
 
-## セキュリティと信頼性の強化
-- セッション検証や Cookie 属性の扱いを見直し、デバッグ情報が画面に漏れないよう整理しました。
-- キャッシュ同期、ファイルアップロード、メール送信といった運用フローで null チェックやリトライ条件を追加し、PHP 8 系で顕在化していた警告を抑えています。
-- サンプル `.htaccess` から古い記述を削除し、初期状態でも堅牢な構成に近づけました。
+## アップデート手順
+1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性をチェックしてください。
+2. アップデート後は `manager/tools/fix_settings.php`（またはマネージャーの Fix Settings ツール）を実行し、権限テーブルやプラグイン設定の不足を補います。
+3. UTF-8MB4 へ移行する場合は新しいリストを使って `install/convert2utf8mb4.php` を実行します。バックアップとリハーサルを忘れずに。
+4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されているため、適用後にパーミッションを再確認してください。
 
-## PHP 8 時代の運用ガイド
-1. まずはテスト環境で「PHP エラーの検出レベル」を高めに設定し、Warning や Notice の発生源を洗い出してください。
-2. 問題のあるスニペットやプラグインだけ、今回の新機能でエラーレベルを一時的に緩めます。動作を確保したうえで、コードの修正を進めてください。
-3. 修正が完了した要素から順に検出レベルを元へ戻し、最終的にはグローバル設定も「全て検出」に近づけるのが理想です。
-4. エラーを握りつぶしたまま運用し続けることは、セキュリティリスクにつながります。長期的には PHP 8 を前提とした最新の書き方にアップデートしてください。
-
-## 開発者向けの主な変更
-- DocumentParser やサブパーサーで未定義プロパティを初期化し、`@` 演算子に頼らずに実行できるよう整理しました。
-- `mb_strftime()` 依存を減らし、`DateTime` ベースでロケールを意識した日時表記を扱えるようにしています。
-- `config()`・`entity()`・`doc()` などのヘルパー整備が進み、グローバル変数を直接触らなくても主要情報を取得しやすくなりました。
-- PHPMailer や FileUpload など外部コンポーネント周辺の古い互換コードを削除し、PHP 8.4 でも問題なく動作するよう更新しています。
-- アップグレードスクリプトを刷新し、権限テーブルやプラグイン設定の差分を自動で補うようになりました。既存環境の構成を保ちながら安全に移行できます。
-
-## 廃止・互換性に関する注意
-- 旧来の `mysql` ドライバーを削除し、データベースは `mysqli` 固定になりました。PHP 側の拡張が有効になっているかご確認ください。
-- Safe Mode 互換のために残っていた `set_time_limit()` などの古いワークアラウンドを整理しています。独自スクリプトで同様の想定をしている場合は調整が必要です。
-- `.env` を導入したことで、設定値はコードと環境ファイルの双方で管理する前提になりました。自動デプロイでは `.env` をリポジトリ外で保護する運用へ切り替えてください。
-
-## アップデート手順と既知の注意事項
-1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性を確認してください。
-2. アップデート後は `fix_settings` ツールを実行し、権限テーブルやプラグイン設定に不足がないかチェックします。
-3. UTF-8MB4 化を検討している場合は、アップデート後に新しいリストを使って `install/convert2utf8mb4.php` を実行してください。
-4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されています。適用後にパーミッションを再確認してください。
-
-現代的な運用・開発フローに合わせた改善を随所に盛り込みながら、旧来の資産も丁寧に引き継げるよう配慮したのが 1.2.0J です。Evolution CMS JP Edition を PHP 8 時代でも安心してご活用ください。
+Evolution CMS JP Edition 1.2.0J は、レガシー資産を抱えたままでも PHP 8 時代へ滑らかに移行できるよう設計されています。粒度の細かいエラーレベル制御と環境変数管理を活用し、安全なアップデートを進めてください。
