Clarify 1.2.0J release notes for administrators

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,28 +1,30 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は「PHP 8 時代を安心して駆け抜ける Evolution」をテーマに、前バージョンで着手した互換性対応をさらに深掘りした大型アップデートです。PHP 7.4 までは Notice で済んでいたコードが PHP 8 では Warning/Error に昇格する問題を洗い直し、DocumentParser を中心としたイベント順序やログ出力を再構築しました。最大のポイントは、**スニペットやプラグイン単位で PHP エラーレベルを調整できる新機能**です。従来の「グローバル設定を全て無視」に頼らず、問題のある要素だけ一時的に緩めながら段階的に修正できるようになりました。セキュリティを下げたまま運用を続けることは推奨しませんが、これまでより安全に移行期間を確保できます。
+Evolution CMS JP Edition 1.2.0J は、PHP 8 でも安心して運用できることを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
 
-設定面では `.env` による外部化を標準化し、UTF-8MB4 変換の導線も整備することで、日々の運用効率とユーザー体験を両立しました。以下では「追加・改良・廃止」を一続きで俯瞰できる形で整理します。
+最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。全体設定を緩めずに問題のある要素だけ一時的に調整できるため、移行期間を安全に確保したまま段階的に修正を進められます。
+
+さらに `.env` による設定外部化や UTF-8MB4 変換フローの整備で、運用負荷と文字化けの不安をまとめて減らしました。以下では「追加・改良・廃止」を一目で追える形で整理しています。
 
 ---
 
 ## 追加されたもの (Added)
-- **スニペット/プラグイン単位の PHP エラーレベル制御**: 問題のある要素だけ検出レベルを緩め、動作を確保しつつ修正を進められます。移行後は必ず通常レベルへ戻してください。
-- **Dotenv ローダーと `env()` ヘルパー**: `.env` ファイルから環境変数を読み込み、`config.inc.php` に依存せず設定を切り替えられます。インストーラーとフロントエンド双方で利用可能です。
-- **`index.php` / `install/index.php` の `.env` 読み込み処理**: 設定をコードベースから切り離し、環境差異に強い構成へ移行できます。
-- **設定修復スクリプト `fix_settings.php`**: 旧来の SQL ファイルではなく PHP スクリプトで権限やオプションを補完します。アップグレード直後に実行することで設定漏れを解消できます。
-- **管理画面のツリーペインタイトル省略オプション**: 長いリソース名でも見やすく管理できます。
-- **Basic 認証環境でのエクスポート警告**: 認証が有効なサイトでエクスポートする際に注意喚起を表示します。
+- **スニペット/プラグイン単位の PHP エラーレベル設定**: グローバル設定を下げずに、問題がある要素だけエラー検出を一時的に緩められます。修正が終わったら通常レベルへ戻してください。
+- **Dotenv ローダーと `env()` ヘルパー**: 認証情報や URL を `.env` に移し、環境ごとに設定を切り替えやすくしました。スニペットからも `env()` で安全に参照できます。
+- **`index.php` / `install/index.php` の `.env` 読み込み処理**: アプリケーション起動時に `.env` を自動読込し、設定をコードベースから切り離します。
+- **設定修復スクリプト `fix_settings.php`**: PHP スクリプトで権限やオプションを補完できるようになり、アップグレード直後の抜け漏れを素早く解消できます。
+- **管理画面のツリーペインタイトル省略オプション**: 長いリソース名でも表示が崩れず、管理者の視認性が向上します。
+- **Basic 認証環境でのエクスポート警告**: 認証をかけた状態でサイトをエクスポートする際に注意喚起を表示します。
 
 ## 改良されたもの (Improved)
-- **PHP 8.4 互換性の徹底強化**: `E_STRICT` を廃止し、未定義プロパティや古い構文を精査しました。`[]` 配列アクセスや `config()`/`sessionv()` などのヘルパー利用を徹底しています。
-- **DocumentParser と周辺サブシステムの安定化**: 発火順序・キャッシュ同期・ログ出力を整理し、`@` 演算子に頼らない例外処理へ移行しました。
-- **UTF-8MB4 変換フローの整備**: 主要テーブルの自動判別ロジックを追加し、異体字（髙 など）や絵文字も欠損なく保存できます。
-- **マネージャー UI/UX の改善**: 文書検索・ユーザー検索の SQL を整理してロールフィルタが正しく働くようにし、MCPUK ファイルブラウザーやフォーム配置を見直しました。ZipArchive ベースのパッケージ取り込みで大型拡張も安定して導入できます。
+- **PHP 8.4 互換性の再点検**: `E_STRICT` の扱いを廃止し、未定義プロパティや古い構文を整理しました。Warning/Notice を抑えつつ最新 PHP でも安定動作します。
+- **DocumentParser と周辺サブシステムの安定化**: イベント発火順序やキャッシュ同期を整え、`@` 演算子に頼らない例外処理へ移行しました。
+- **UTF-8MB4 変換フローの整備**: 自動判別リストを更新し、異体字（髙 など）や絵文字も欠損なく保存できます。
+- **マネージャーの操作性向上**: 文書検索・ユーザー検索の SQL を見直し、ロールフィルタや MCPUK ファイルブラウザーの挙動を改善しました。ZipArchive ベースのパッケージ取り込みで大型拡張も安定します。
 - **セキュリティ属性の強化**: Cookie に `Secure` / `HttpOnly` / `SameSite` を付与し、セッション検証とログ出力を見直しました。
-- **メール/アップロード/キャッシュ関連の堅牢化**: null チェックとリトライ条件を追加して PHP 8 系で顕在化した警告を抑えています。
-- **テンプレート・プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に直接触れなくても主要情報を取得できるようにしました。
+- **メール・アップロード・キャッシュ処理の堅牢化**: null チェックやリトライ条件を追加し、PHP 8 系で増えた警告を抑えています。
+- **テンプレート/プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に触れずに必要な情報を取得できます。
 
 ## 廃止・置き換えたもの (Removed / Replaced)
 | 廃止・変更対象 | 理由 | 代替手段 |
@@ -38,14 +40,14 @@ Evolution CMS JP Edition 1.2.0J は「PHP 8 時代を安心して駆け抜ける
 ---
 
 ## PHP 8 時代の運用ガイド
-1. **テスト環境での事前洗い出し**: まずは PHP エラーレベルを最大にして Warning/Notice の発生源を確認します。
-2. **問題の切り分け**: 不具合を起こすスニペットやプラグインだけ、今回追加したエラーレベル設定で一時的に緩めます。動作を確保した状態で修正を進めてください。
-3. **段階的な巻き戻し**: 修正が完了した要素から検出レベルを標準へ戻し、最終的にはグローバル設定も「全て検出」に近づけるのが理想です。
-4. **恒久対策を優先**: エラーを握り潰したままの運用は推奨されません。PHP 8 向けにコードを更新し、セキュリティレベルを下げっぱなしにしないことが大切です。
+1. **テスト環境での事前確認**: PHP エラーレベルを最大にし、Warning/Notice の発生源を洗い出します。
+2. **要素ごとの暫定対処**: 問題を起こすスニペットやプラグインだけ、今回追加したエラーレベル設定で一時的に緩めます。
+3. **順番に元へ戻す**: 修正が終わった要素から検出レベルを標準へ戻し、最終的にはグローバル設定も「全て検出」に近づけます。
+4. **恒久対応を完了させる**: 緩めたままの運用は推奨されません。PHP 8 向けにコードを更新し、セキュリティレベルを下げっぱなしにしないでください。
 
 ## UTF-8MB4 移行メモ
-- 1.2.0J では主要テーブルの判別リストをアップデートし、`install/convert2utf8mb4.php` を使うだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない UTF-8MB4 へ移行できます。
-- 既存サイトを変換する場合は事前にバックアップを取得し、ダウンタイムを確保したうえで実行してください。インストール直後に UTF-8MB4 で構築するケースでも、同じ手順で整合性を確認できます。
+- 1.2.0J では主要テーブルの判別リストを更新し、`install/convert2utf8mb4.php` を実行するだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない UTF-8MB4 へ移行できます。
+- 既存サイトを変換する場合はバックアップとダウンタイムを確保してから実行してください。新規構築でも同じ手順で整合性を確認できます。
 
 ## `.env` サンプルと活用のヒント
 `.env` を使えば、データベース接続情報やメール設定などをリポジトリ外に分離しつつ、`env()` ヘルパーで一貫して参照できます。以下は最小構成のサンプルです。
@@ -67,10 +69,10 @@ MAIL_FROM_ADDRESS=info@example.jp
 - 既存の `config.inc.php` と併用できるため、段階的な移行も可能です。カスタムスニペットからは `env('KEY', 'fallback')` のように参照できます。
 
 ## 開発者向けメモ
-- DocumentParser や SubParser で初期化されていなかったプロパティを整理し、例外処理を強化しました。
-- `config()`・`entity()`・`doc()` などのヘルパーが拡充され、グローバル変数を直接参照しなくても主要情報にアクセスできます。
-- PHPMailer・FileUpload など外部ライブラリ周辺の互換コードを更新し、PHP 8.4 でも問題なく動作します。
-- ZipArchive を利用したパッケージ展開や、セッション/キャッシュ API の見直しによって、アドオン開発時のエッジケースが軽減されています。
+- DocumentParser や SubParser の未初期化プロパティを整理し、例外処理を強化しました。
+- `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数を直接参照しなくても主要情報にアクセスできます。
+- PHPMailer・FileUpload など外部ライブラリの互換コードを更新し、PHP 8.4 でも問題なく動作します。
+- ZipArchive を使ったパッケージ展開や、セッション/キャッシュ API の見直しでアドオン開発時のエッジケースを軽減しています。
 
 ## アップデート手順
 1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性をチェックしてください。
@@ -78,4 +80,4 @@ MAIL_FROM_ADDRESS=info@example.jp
 3. UTF-8MB4 へ移行する場合は新しいリストを使って `install/convert2utf8mb4.php` を実行します。バックアップとリハーサルを忘れずに。
 4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されているため、適用後にパーミッションを再確認してください。
 
-Evolution CMS JP Edition 1.2.0J は、レガシー資産を抱えたままでも PHP 8 時代へ滑らかに移行できるよう設計されています。粒度の細かいエラーレベル制御と環境変数管理を活用し、安全なアップデートを進めてください。
+Evolution CMS JP Edition 1.2.0J は、細かなエラーレベル制御と環境変数管理を活用することで、レガシー資産を抱えたままでも PHP 8 へ安全に移行できるよう設計されています。
