Clarify UTF-8MB4 migration guidance

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -46,8 +46,8 @@ Evolution CMS JP Edition 1.2.0J は、PHP 8 でも安心して運用できるこ
 4. **恒久対応を完了させる**: 緩めたままの運用は推奨されません。PHP 8 向けにコードを更新し、セキュリティレベルを下げっぱなしにしないでください。
 
 ## UTF-8MB4 移行メモ
-- 1.2.0J では主要テーブルの判別リストを更新し、`install/convert2utf8mb4.php` を実行するだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない UTF-8MB4 へ移行できます。
-- 既存サイトを変換する場合はバックアップとダウンタイムを確保してから実行してください。新規構築でも同じ手順で整合性を確認できます。
+- 1.2.0J では主要テーブルの判別リストを更新し、アップデートウィザードの途中で UTF-8MB4 変換を案内します。既存サイトは画面のオプションを選択するだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない構成へ移行できます。
+- 変換は任意です。アップデート前にバックアップとダウンタイムを確保したうえで、環境に合わせて実行可否を判断してください。新規構築ではインストーラーが同じ判別リストを使って自動的に最適な設定を選択します。
 
 ## `.env` サンプルと活用のヒント
 `.env` を使えば、データベース接続情報やメール設定などをリポジトリ外に分離しつつ、`env()` ヘルパーで一貫して参照できます。以下は最小構成のサンプルです。
@@ -77,7 +77,7 @@ MAIL_FROM_ADDRESS=info@example.jp
 ## アップデート手順
 1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性をチェックしてください。
 2. アップデート後は `manager/tools/fix_settings.php`（またはマネージャーの Fix Settings ツール）を実行し、権限テーブルやプラグイン設定の不足を補います。
-3. UTF-8MB4 へ移行する場合は新しいリストを使って `install/convert2utf8mb4.php` を実行します。バックアップとリハーサルを忘れずに。
+3. UTF-8MB4 へ移行する場合は、アップデートウィザードの案内に従って変換オプションを有効にします。バックアップとリハーサルを忘れずに。
 4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されているため、適用後にパーミッションを再確認してください。
 
 Evolution CMS JP Edition 1.2.0J は、細かなエラーレベル制御と環境変数管理を活用することで、レガシー資産を抱えたままでも PHP 8 へ安全に移行できるよう設計されています。
