Refine 1.2.0J release note guidance

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,27 +1,25 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、PHP 8 でも安心して運用できることを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
+Evolution CMS JP Edition 1.2.0J は、PHP 8 時代に安心して移行することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
 
-最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。全体設定を緩めずに問題のある要素だけ一時的に調整できるため、移行期間を安全に確保したまま段階的に修正を進められます。
+最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。システム全体のセキュリティレベル（グローバル設定のエラーハンドリング）を下げずに問題のある要素だけ一時的に調整できるため、移行期間を安全に確保したまま段階的に修正を進められます。
 
-さらに `.env` による設定外部化や UTF-8MB4 変換フローの整備で、運用負荷と文字化けの不安をまとめて減らしました。以下では「追加・改良・廃止」を一目で追える形で整理しています。
+さらに `.env` による設定外部化や、アップデートウィザードに統合した UTF-8MB4 変換フローで、運用負荷と文字化けの不安をまとめて減らしました。以下では「追加・改良・廃止」を一目で追える形で整理しています。
 
 ---
 
 ## 追加されたもの (Added)
-- **スニペット/プラグイン単位の PHP エラーレベル設定**: グローバル設定を下げずに、問題がある要素だけエラー検出を一時的に緩められます。修正が終わったら通常レベルへ戻してください。
+- **スニペット/プラグイン単位の PHP エラーレベル設定**: システム全体のセキュリティレベルを変更せずに、問題がある要素だけエラー検出を一時的に緩められます。修正が終わったら通常レベルへ戻してください。
 - **Dotenv ローダーと `env()` ヘルパー**: 認証情報や URL を `.env` に移し、環境ごとに設定を切り替えやすくしました。スニペットからも `env()` で安全に参照できます。
-- **`index.php` / `install/index.php` の `.env` 読み込み処理**: アプリケーション起動時に `.env` を自動読込し、設定をコードベースから切り離します。
-- **設定修復スクリプト `fix_settings.php`**: PHP スクリプトで権限やオプションを補完できるようになり、アップグレード直後の抜け漏れを素早く解消できます。
 - **管理画面のツリーペインタイトル省略オプション**: 長いリソース名でも表示が崩れず、管理者の視認性が向上します。
-- **Basic 認証環境でのエクスポート警告**: 認証をかけた状態でサイトをエクスポートする際に注意喚起を表示します。
+- **サイトエクスポート時の Basic 認証検知**: ベーシック認証が有効な環境でエクスポートが失敗しやすい問題を知らせ、公開ステータスの「メンテナンスモード」を利用する運用へ誘導します。
 
 ## 改良されたもの (Improved)
 - **PHP 8.4 互換性の再点検**: `E_STRICT` の扱いを廃止し、未定義プロパティや古い構文を整理しました。Warning/Notice を抑えつつ最新 PHP でも安定動作します。
 - **DocumentParser と周辺サブシステムの安定化**: イベント発火順序やキャッシュ同期を整え、`@` 演算子に頼らない例外処理へ移行しました。
-- **UTF-8MB4 変換フローの整備**: 自動判別リストを更新し、異体字（髙 など）や絵文字も欠損なく保存できます。
-- **マネージャーの操作性向上**: 文書検索・ユーザー検索の SQL を見直し、ロールフィルタや MCPUK ファイルブラウザーの挙動を改善しました。ZipArchive ベースのパッケージ取り込みで大型拡張も安定します。
+- **UTF-8MB4 変換フローの整備**: アップデートウィザード内で変換オプションを案内し、異体字（髙 など）や絵文字も欠損なく保存できます。
+- **マネージャーの操作性向上**: 文書検索・ユーザー検索の SQL を見直し、ロールフィルタや MCPUK ファイルブラウザーの挙動を改善しました。
 - **セキュリティ属性の強化**: Cookie に `Secure` / `HttpOnly` / `SameSite` を付与し、セッション検証とログ出力を見直しました。
 - **メール・アップロード・キャッシュ処理の堅牢化**: null チェックやリトライ条件を追加し、PHP 8 系で増えた警告を抑えています。
 - **テンプレート/プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に触れずに必要な情報を取得できます。
@@ -30,27 +28,25 @@ Evolution CMS JP Edition 1.2.0J は、PHP 8 でも安心して運用できるこ
 | 廃止・変更対象 | 理由 | 代替手段 |
 | --- | --- | --- |
 | `mysql.inc.php` および `mysql_*` 互換コード | PHP7 以降で非推奨かつ保守不能 | `mysqli.inc.php` へ完全移行 |
-| `fix_settings.sql` | 環境差異が大きく、適用漏れが発生 | PHP スクリプト `fix_settings.php` で統一 |
 | `strftime()` / `mb_strftime()` 依存 | PHP 8.1 で非推奨 | `DateTime`・`date()` ベースの実装 |
 | `{}` による配列アクセス・`extract()` 多用 | 可読性・安全性の低下 | `[]` と明示的な代入へ統一 |
 | 過度な `@` 演算子によるエラー抑止 | 問題の可視化を阻害 | 明示的な条件分岐と例外処理 |
 | 旧 `sample.htaccess` の冗長コメント | 初期状態での適用性が低かった | 必要最小限の記述に再整理 |
-| Mootools ベースの旧 UI 断片 | 互換性が低下・競合多発 | Bootstrap 5/JQuery ベースの実装 |
 
 ---
 
 ## PHP 8 時代の運用ガイド
 1. **テスト環境での事前確認**: PHP エラーレベルを最大にし、Warning/Notice の発生源を洗い出します。
 2. **要素ごとの暫定対処**: 問題を起こすスニペットやプラグインだけ、今回追加したエラーレベル設定で一時的に緩めます。
-3. **順番に元へ戻す**: 修正が終わった要素から検出レベルを標準へ戻し、最終的にはグローバル設定も「全て検出」に近づけます。
-4. **恒久対応を完了させる**: 緩めたままの運用は推奨されません。PHP 8 向けにコードを更新し、セキュリティレベルを下げっぱなしにしないでください。
+3. **順番に元へ戻す**: 修正が終わった要素から検出レベルを標準へ戻し、最終的にはシステム全体のセキュリティレベル（グローバル設定）も「全て検出」に近づけます。
+4. **恒久対応を完了させる**: 緩めたままの運用は推奨されません。PHP 8 向けにコードを更新し、システム全体の設定を下げっぱなしにしないでください。
 
 ## UTF-8MB4 移行メモ
 - 1.2.0J では主要テーブルの判別リストを更新し、アップデートウィザードの途中で UTF-8MB4 変換を案内します。既存サイトは画面のオプションを選択するだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない構成へ移行できます。
 - 変換は任意です。アップデート前にバックアップとダウンタイムを確保したうえで、環境に合わせて実行可否を判断してください。新規構築ではインストーラーが同じ判別リストを使って自動的に最適な設定を選択します。
 
 ## `.env` サンプルと活用のヒント
-`.env` を使えば、データベース接続情報やメール設定などをリポジトリ外に分離しつつ、`env()` ヘルパーで一貫して参照できます。以下は最小構成のサンプルです。
+`.env` を使えば、データベース接続情報や公開 URL などをリポジトリ外に分離しつつ、`env()` ヘルパーで一貫して参照できます。以下は最小構成のサンプルです。
 
 ```dotenv
 # database
@@ -62,22 +58,21 @@ TABLE_PREFIX=modx_
 
 # application
 MODX_BASE_URL=https://example.jp/
-MAIL_FROM_ADDRESS=info@example.jp
 ```
 
 - `.env` は本番・ステージング・ローカルで内容を切り替えられます。自動デプロイでは `.env` をリポジトリに含めず、各環境で安全に配布してください。
 - 既存の `config.inc.php` と併用できるため、段階的な移行も可能です。カスタムスニペットからは `env('KEY', 'fallback')` のように参照できます。
+- メール送信設定は従来どおりマネージャーのグローバル設定で管理します（`.env` からは変更できません）。
 
 ## 開発者向けメモ
 - DocumentParser や SubParser の未初期化プロパティを整理し、例外処理を強化しました。
 - `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数を直接参照しなくても主要情報にアクセスできます。
 - PHPMailer・FileUpload など外部ライブラリの互換コードを更新し、PHP 8.4 でも問題なく動作します。
-- ZipArchive を使ったパッケージ展開や、セッション/キャッシュ API の見直しでアドオン開発時のエッジケースを軽減しています。
+- キャッシュディレクトリのデフォルトを `temp/cache/` へ移し、旧 `assets/cache/` との互換レイヤーを整備しました。アドオン開発時は新パスを前提にしてください。
 
 ## アップデート手順
 1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性をチェックしてください。
 2. アップデート後は `manager/tools/fix_settings.php`（またはマネージャーの Fix Settings ツール）を実行し、権限テーブルやプラグイン設定の不足を補います。
 3. UTF-8MB4 へ移行する場合は、アップデートウィザードの案内に従って変換オプションを有効にします。バックアップとリハーサルを忘れずに。
-4. キャッシュディレクトリ（`assets/cache/`）と `temp/` の書き込み権限が強化されているため、適用後にパーミッションを再確認してください。
 
 Evolution CMS JP Edition 1.2.0J は、細かなエラーレベル制御と環境変数管理を活用することで、レガシー資産を抱えたままでも PHP 8 へ安全に移行できるよう設計されています。
