Clarify PHP 8 migration guidance in 1.2.0J notes

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -3,23 +3,23 @@
 ## 概要
 Evolution CMS JP Edition 1.2.0J は、PHP 8 時代に安心して移行することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
 
-最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。システム全体のセキュリティレベル（グローバル設定のエラーハンドリング）を下げずに問題のある要素だけ一時的に調整できるため、移行期間を安全に確保したまま段階的に修正を進められます。
+最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。これまでは画面上のエラーを抑えるために、グローバル設定の「PHP エラーの検出レベル」を「全て無視する」へ下げる対応に頼るケースがありましたが、今回は要素ごとに一時的に緩めるだけで済みます。
 
 さらに `.env` による設定外部化や、アップデートウィザードに統合した UTF-8MB4 変換フローで、運用負荷と文字化けの不安をまとめて減らしました。以下では「追加・改良・廃止」を一目で追える形で整理しています。
 
 ---
 
 ## 追加されたもの (Added)
-- **スニペット/プラグイン単位の PHP エラーレベル設定**: システム全体のセキュリティレベルを変更せずに、問題がある要素だけエラー検出を一時的に緩められます。修正が終わったら通常レベルへ戻してください。
+- **スニペット/プラグイン単位の PHP エラーレベル設定**: グローバル設定の「PHP エラーの検出レベル」を下げなくても、問題のある要素だけ警告を一時的に抑えられます。修正が終わったら通常レベルへ戻してください。
 - **Dotenv ローダーと `env()` ヘルパー**: 認証情報や URL を `.env` に移し、環境ごとに設定を切り替えやすくしました。スニペットからも `env()` で安全に参照できます。
 - **管理画面のツリーペインタイトル省略オプション**: 長いリソース名でも表示が崩れず、管理者の視認性が向上します。
-- **サイトエクスポート時の Basic 認証検知**: ベーシック認証が有効な環境でエクスポートが失敗しやすい問題を知らせ、公開ステータスの「メンテナンスモード」を利用する運用へ誘導します。
+- **サイトエクスポート時の Basic 認証検知**: ベーシック認証を有効にしたままエクスポートすると必ず失敗するため、その理由を画面に表示する警告を追加しました。非公開にしたい場合は公開ステータスの「メンテナンスモード」を利用してください。
 
 ## 改良されたもの (Improved)
 - **PHP 8.4 互換性の再点検**: `E_STRICT` の扱いを廃止し、未定義プロパティや古い構文を整理しました。Warning/Notice を抑えつつ最新 PHP でも安定動作します。
 - **DocumentParser と周辺サブシステムの安定化**: イベント発火順序やキャッシュ同期を整え、`@` 演算子に頼らない例外処理へ移行しました。
 - **UTF-8MB4 変換フローの整備**: アップデートウィザード内で変換オプションを案内し、異体字（髙 など）や絵文字も欠損なく保存できます。
-- **マネージャーの操作性向上**: 文書検索・ユーザー検索の SQL を見直し、ロールフィルタや MCPUK ファイルブラウザーの挙動を改善しました。
+- **管理画面の操作性向上**: 文書検索・ユーザー検索の SQL を見直し、ロールフィルタや MCPUK ファイルブラウザーの挙動を改善しました。
 - **セキュリティ属性の強化**: Cookie に `Secure` / `HttpOnly` / `SameSite` を付与し、セッション検証とログ出力を見直しました。
 - **メール・アップロード・キャッシュ処理の堅牢化**: null チェックやリトライ条件を追加し、PHP 8 系で増えた警告を抑えています。
 - **テンプレート/プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に触れずに必要な情報を取得できます。
@@ -62,7 +62,6 @@ MODX_BASE_URL=https://example.jp/
 
 - `.env` は本番・ステージング・ローカルで内容を切り替えられます。自動デプロイでは `.env` をリポジトリに含めず、各環境で安全に配布してください。
 - 既存の `config.inc.php` と併用できるため、段階的な移行も可能です。カスタムスニペットからは `env('KEY', 'fallback')` のように参照できます。
-- メール送信設定は従来どおりマネージャーのグローバル設定で管理します（`.env` からは変更できません）。
 
 ## 開発者向けメモ
 - DocumentParser や SubParser の未初期化プロパティを整理し、例外処理を強化しました。
