--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,9 +1,9 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、PHP 8 時代に安心して移行することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
+Evolution CMS JP Edition 1.2.0J は、PHP 8 で編んてて動作することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
 
-最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。これまでは画面上のエラーを抑えるために、グローバル設定の「PHP エラーの検出レベル」を「全て無視する」へ下げる対応に頼るケースがありましたが、今回は要素ごとに一時的に緩めるだけで済みます。
+最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。これまでは画面上のエラーを抑えるために、グローバル設定の「PHP エラーの検出レベル」を「全て無視する」へ下げる対応に頼るケースがありましたが、今回は、ユーザーがインストールした個別のスニペット・プラグインごとに一時的に緩めるだけで済みます。つまりシステム全体のセキュリテティレベルを下げる必要がありません。
 
 さらに `.env` による設定外部化や、アップデートウィザードに統合した UTF-8MB4 変換フローで、運用負荷と文字化けの不安をまとめて減らしました。以下では「追加・改良・廃止」を一目で追える形で整理しています。
 
@@ -17,11 +17,9 @@ Evolution CMS JP Edition 1.2.0J は、PHP 8 時代に安心して移行するこ
 
 ## 改良されたもの (Improved)
 - **PHP 8.4 互換性の再点検**: `E_STRICT` の扱いを廃止し、未定義プロパティや古い構文を整理しました。Warning/Notice を抑えつつ最新 PHP でも安定動作します。
-- **DocumentParser と周辺サブシステムの安定化**: イベント発火順序やキャッシュ同期を整え、`@` 演算子に頼らない例外処理へ移行しました。
 - **UTF-8MB4 変換フローの整備**: アップデートウィザード内で変換オプションを案内し、異体字（髙 など）や絵文字も欠損なく保存できます。
-- **管理画面の操作性向上**: 文書検索・ユーザー検索の SQL を見直し、ロールフィルタや MCPUK ファイルブラウザーの挙動を改善しました。
+- **MCPUK ファイルブラウザーのリファクタリング**: MCPUK ファイルブラウザーの内部構造をモダンな構造に変更しました。
 - **セキュリティ属性の強化**: Cookie に `Secure` / `HttpOnly` / `SameSite` を付与し、セッション検証とログ出力を見直しました。
-- **メール・アップロード・キャッシュ処理の堅牢化**: null チェックやリトライ条件を追加し、PHP 8 系で増えた警告を抑えています。
 - **テンプレート/プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に触れずに必要な情報を取得できます。
 
 ## 廃止・置き換えたもの (Removed / Replaced)
@@ -35,14 +33,13 @@ Evolution CMS JP Edition 1.2.0J は、PHP 8 時代に安心して移行するこ
 
 ---
 
-## PHP 8 時代の運用ガイド
-1. **テスト環境での事前確認**: PHP エラーレベルを最大にし、Warning/Notice の発生源を洗い出します。
+## PHP 8 環境での動作確認
+1. **テスト環境での事前確認**: PHP エラーレベルを「通知レベルの軽度の警告を無視する」にし、Warning/Error の発生源を洗い出します。
 2. **要素ごとの暫定対処**: 問題を起こすスニペットやプラグインだけ、今回追加したエラーレベル設定で一時的に緩めます。
-3. **順番に元へ戻す**: 修正が終わった要素から検出レベルを標準へ戻し、最終的にはシステム全体のセキュリティレベル（グローバル設定）も「全て検出」に近づけます。
-4. **恒久対応を完了させる**: 緩めたままの運用は推奨されません。PHP 8 向けにコードを更新し、システム全体の設定を下げっぱなしにしないでください。
+3. **順番に元へ戻す**: 修正が終わった要素から検出レベルを標準へ戻します。
 
 ## UTF-8MB4 移行メモ
-- 1.2.0J では主要テーブルの判別リストを更新し、アップデートウィザードの途中で UTF-8MB4 変換を案内します。既存サイトは画面のオプションを選択するだけでタツサキ・ハシゴダカ（髙 など）や絵文字が欠損しない構成へ移行できます。
+- 1.2.0J では、アップデートウィザードの途中で UTF-8MB4 変換を案内します。UTF-8MB4へ移行することにより、既存サイトは画面のオプションを選択するだけでタツサキ・ハシゴダカや絵文字が欠損しない構成へ移行できます。
 - 変換は任意です。アップデート前にバックアップとダウンタイムを確保したうえで、環境に合わせて実行可否を判断してください。新規構築ではインストーラーが同じ判別リストを使って自動的に最適な設定を選択します。
 
 ## `.env` サンプルと活用のヒント
@@ -71,7 +68,7 @@ MODX_BASE_URL=https://example.jp/
 
 ## アップデート手順
 1. 本番適用前に PHP 8.4 相当のテスト環境で動作確認を行い、`config.inc.php` と `.env` の整合性をチェックしてください。
-2. アップデート後は `manager/tools/fix_settings.php`（またはマネージャーの Fix Settings ツール）を実行し、権限テーブルやプラグイン設定の不足を補います。
+2. アップデート後はグローバル設定を更新し、権限テーブルやプラグイン設定の不足を補います。
 3. UTF-8MB4 へ移行する場合は、アップデートウィザードの案内に従って変換オプションを有効にします。バックアップとリハーサルを忘れずに。
 
 Evolution CMS JP Edition 1.2.0J は、細かなエラーレベル制御と環境変数管理を活用することで、レガシー資産を抱えたままでも PHP 8 へ安全に移行できるよう設計されています。
