--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -1,7 +1,7 @@
 # Evolution CMS JP Edition 1.2.0J リリースノート
 
 ## 概要
-Evolution CMS JP Edition 1.2.0J は、PHP 8 で編んてて動作することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
+Evolution CMS JP Edition 1.2.0J は、PHP 8 で安定動作することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
 
 最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。これまでは画面上のエラーを抑えるために、グローバル設定の「PHP エラーの検出レベル」を「全て無視する」へ下げる対応に頼るケースがありましたが、今回は、ユーザーがインストールした個別のスニペット・プラグインごとに一時的に緩めるだけで済みます。つまりシステム全体のセキュリテティレベルを下げる必要がありません。
 
