--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -3,7 +3,7 @@
 ## 概要
 Evolution CMS JP Edition 1.2.0J は、PHP 8 で安定動作することを最優先にした大型アップデートです。前バージョンから続く互換性対応を DocumentParser のイベント順序やログ出力まで掘り下げました。
 
-最大の注目点は、スニペットやプラグイン単位で PHP エラーレベルを設定できるようになったことです。これまでは画面上のエラーを抑えるために、グローバル設定の「PHP エラーの検出レベル」を「全て無視する」へ下げる対応に頼るケースがありましたが、今回は、ユーザーがインストールした個別のスニペット・プラグインごとに一時的に緩めるだけで済みます。つまりシステム全体のセキュリテティレベルを下げる必要がありません。
+最大の注目点は、スニペットやプラグイン単位で「PHP エラーの検出レベル」を設定できるようになったことです。これまでは画面上のエラーを抑えるために、グローバル設定の「PHP エラーの検出レベル」を「全て無視する」へ下げる対応に頼るケースがありましたが、リスクが高く非推奨です。今回の追加仕様により、ユーザーがインストールした個別のスニペット・プラグインごとに一時的にレベルを緩めるだけで済みます。
 
 さらに `.env` による設定外部化や、アップデートウィザードに統合した UTF-8MB4 変換フローで、運用負荷と文字化けの不安をまとめて減らしました。以下では「追加・改良・廃止」を一目で追える形で整理しています。
 
