Revise UTF-8MB4 conversion flow for better character support
Updated the UTF-8MB4 conversion flow to ensure that variant characters and emojis are preserved without loss. The conversion is now optional.

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -17,7 +17,7 @@ Evolution CMS JP Edition 1.2.0J は、PHP 8 で安定動作することを最優
 
 ## 改良されたもの (Improved)
 - **PHP 8.4 互換性の再点検**: `E_STRICT` の扱いを廃止し、未定義プロパティや古い構文を整理しました。Warning/Notice を抑えつつ最新 PHP でも安定動作します。
-- **UTF-8MB4 変換フローの整備**: アップデートウィザード内で変換オプションを案内し、異体字（髙 など）や絵文字も欠損なく保存できます。
+- **UTF-8MB4 変換フローの整備**: テーブルをUTF-8MB4に変換することにより、異体字（髙 など）や絵文字も欠損なく保存できるようになります。変換は任意です。
 - **MCPUK ファイルブラウザーのリファクタリング**: MCPUK ファイルブラウザーの内部構造をモダンな構造に変更しました。
 - **セキュリティ属性の強化**: Cookie に `Secure` / `HttpOnly` / `SameSite` を付与し、セッション検証とログ出力を見直しました。
 - **テンプレート/プラグイン API の整備**: `config()`・`entity()`・`doc()` などのヘルパーを拡充し、グローバル変数に触れずに必要な情報を取得できます。
