Update release notes for version 1.2.0J

--- a/documents/releases/1.2.0J.md
+++ b/documents/releases/1.2.0J.md
@@ -30,6 +30,7 @@ Evolution CMS JP Edition 1.2.0J は、PHP 8 で安定動作することを最優
 | `{}` による配列アクセス・`extract()` 多用 | 可読性・安全性の低下 | `[]` と明示的な代入へ統一 |
 | 過度な `@` 演算子によるエラー抑止 | 問題の可視化を阻害 | 明示的な条件分岐と例外処理 |
 | 旧 `sample.htaccess` の冗長コメント | 初期状態での適用性が低かった | 必要最小限の記述に再整理 |
+| 管理画面の Mootools 依存 | 最新ブラウザで問題あり | Mootools廃止、JavaScript 実装へ移行 |
 
 ---
 
